<?xml version="1.0" encoding="utf-8"?>

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	>
	<TableLayout
		android:id="@+id/filter_fields_table"
	 	android:layout_width="fill_parent"
	 	android:layout_height="wrap_content"
	 	android:stretchColumns="1"
	 	android:layout_alignParentLeft="true"
	 	android:layout_below="@+id/filter_current_location"
	 	>
	 	
	 	<TableRow>
	 		<LinearLayout
	 			android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:layout_span="2"
	 			>
		 		<TextView 
					android:text="@string/filter_region_label" 
					android:id="@+id/filter_region" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textSize="22sp"
					android:textStyle="bold"
					android:layout_marginBottom="5dp"
					>
				</TextView>
				
				<ImageButton
					android:id="@+id/filter_current_location"
					android:src="@drawable/current_location"
					android:layout_width="48dp"
					android:layout_height="48dp"
					android:scaleType="fitCenter"
					android:layout_gravity="right"
					>
				</ImageButton>
			</LinearLayout>
	 	</TableRow>
	 	
	 	<TableRow>
			<TextView 
				android:text="@string/filter_country_label" 
				android:layout_height="wrap_content"
				android:layout_width="wrap_content" 
				android:id="@+id/filter_country_label" 
				android:textSize="16sp"
				android:layout_marginRight="10dp"
				>
			</TextView>
		
			<AutoCompleteTextView
				android:id="@+id/filter_country"  
				android:layout_height="48dip" 
				android:layout_width="fill_parent"
				android:layout_weight="1"
				android:singleLine="true"
				>
			</AutoCompleteTextView>
		</TableRow>
		
		<TableRow>
			<TextView 
				android:text="@string/filter_province_label" 
				android:layout_height="wrap_content" 
				android:id="@+id/filter_province_label" 
				android:layout_width="wrap_content"
				android:textSize="16sp" 
				>
			</TextView>
				
			<EditText 
				android:layout_height="48dip"  
				android:layout_width="fill_parent" 
				android:id="@+id/filter_province"
				android:layout_weight="1"
				android:singleLine="true"
				>
			</EditText>
		</TableRow>
		
		<TableRow>
			<TextView 
				android:text="@string/filter_city_label"
				android:layout_height="wrap_content" 
				android:id="@+id/filter_city_label" 
				android:layout_width="wrap_content"
				android:textSize="16sp" 
				>
			</TextView>
			
			<EditText 
				android:layout_height="48dip"  
				android:layout_width="fill_parent" 
				android:id="@+id/filter_city"
				android:layout_weight="1"
				android:singleLine="true"
				>
			</EditText>
		</TableRow>
		
		<TableRow>
			<CheckBox 
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent" 
				android:id="@+id/filter_worldwide" 
				android:text="@string/filter_worldwide_label"
				android:checked="true"
				android:layout_alignParentLeft="true"
				android:layout_below="@+id/filter_fields_table"
				android:layout_span="2"
				>
			</CheckBox>
		</TableRow>
		
		<TableRow>
			<TextView 
				android:text="@string/filter_content_label" 
				android:id="@+id/filter_content" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:textSize="22sp"
				android:textStyle="bold"
				android:layout_marginBottom="5dp"
				android:layout_marginTop="5dp"
				android:layout_below="@+id/filter_worldwide"
				android:layout_alignParentLeft="true"
				android:layout_span="2"
				>
			</TextView>
		
		</TableRow>
		<TableRow>
			<TextView 
				android:text="@string/filter_title_label" 
				android:layout_height="wrap_content"
				android:layout_width="wrap_content" 
				android:id="@+id/filter_title_label" 
				android:textSize="16sp"
				android:layout_marginRight="10dp"
				>
			</TextView>
		
			<EditText 
				android:layout_height="48dip"  
				android:layout_width="fill_parent" 
				android:id="@+id/filter_title"
				android:layout_weight="1"
				android:singleLine="true"
				>
			</EditText>
		</TableRow>
		
		<TableRow>
			<TextView 
				android:text="@string/filter_tags_label" 
				android:layout_height="wrap_content" 
				android:id="@+id/filter_tags_label" 
				android:layout_width="wrap_content"
				android:textSize="16sp" 
				>
			</TextView>
				
			<EditText 
				android:layout_height="wrap_content"  
				android:layout_width="fill_parent" 
				android:id="@+id/filter_tags"
				android:layout_weight="1"
				android:hint="@string/filter_tags_comma_label"
				android:textSize="14sp"
				>
			</EditText>
		</TableRow>
		
		<TableRow>
			<TextView 
				android:text="@string/filter_order_label" 
				android:layout_height="wrap_content" 
				android:id="@+id/filter_order_label" 
				android:layout_width="wrap_content"
				android:textSize="16sp" 
				>
			</TextView>
			
			<Spinner
				android:id="@+id/filter_order"
				android:entries="@array/order"  
				android:layout_height="48dip" 
				android:layout_width="fill_parent"
				android:layout_weight="1"
				>
			</Spinner>
		</TableRow>
		
		<TableRow>
			<LinearLayout
	 			android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:paddingTop="32dp"
				android:orientation="horizontal"
				android:layout_span="2"
	 			>
	 			<Button
					android:id="@+id/filter_submit_form"
					android:text="@string/filter_submit_form_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:layout_weight="2"
					>
				</Button>
				<Button
					android:id="@+id/filter_reset_form"
					android:text="@string/filter_reset_form_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_horizontal"
					android:layout_weight="1"
					>
				</Button>
			</LinearLayout>
		</TableRow>
		
	</TableLayout>
</ScrollView>