<?xml version="1.0" encoding="utf-8"?>

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	>

	<TableLayout
		android:id="@+id/login"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:stretchColumns="1"
	    >
	    <TableRow>
			<TextView
				android:padding="10dip"
				android:text="@string/mail_label"
				android:textSize="18sp" />
			<EditText
				android:id="@+id/login_mail"
				android:layout_weight="1"
				android:singleLine="true"
				android:padding="5dip"
				android:textSize="18sp"
				/>
		</TableRow>
		<TableRow>
			<TextView
			android:padding="10dip"
			android:text="@string/password_label"
			android:textSize="18sp" />
	
			<EditText
				android:id="@+id/login_password"
				android:layout_weight="1"
				android:singleLine="true"
				android:password="true"
				android:padding="5dip"
				android:textSize="18sp"/>
	
		</TableRow>
		
		<!-- <TableRow>
			<CheckBox
				android:id="@+id/remember_me"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/remeber_me_label"
				android:checked="true"
				android:layout_span="2"
				/>
		</TableRow> -->
		
		<TableRow>
			<Button
				android:id="@+id/login_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:text="@string/login_title"
				android:textSize="18sp"
				android:paddingLeft="32dp"
				android:paddingRight="32dp"
				android:layout_span="2"
				/>
		</TableRow>
		
		<TableRow
			android:layout_marginTop="32dp">
			<TextView
				android:id="@+id/lost_password_link"
				android:text="@string/lost_password_label"
				android:layout_span="2"
				style="@style/links"
				/>
		</TableRow>
		
		<TableRow
			android:layout_marginTop="24dp">
			<TextView
				android:id="@+id/register_link"
				android:text="@string/register_label"
				android:layout_span="2"
				style="@style/links"
				/>
		</TableRow>
				
	</TableLayout>
</ScrollView>
